Changelog
=========


1.0.4 (unreleased)
------------------

- Nothing changed yet.


1.0.3 (2012-02-06)
------------------

- #1739 Arbeitsplatz - Beschränkung folder_overview bei Fokus und Bibliothek
  https://extranet.4teamwork.ch/support/zug/maintlog/1739/
  remove condition which block the batching in topics
  [eschmutz]

- Added sprite icon for KOM.SKO case dossier
  [lgraf]

- Cleaned up the overview box styling. Now the spliting is realy dynamic.
  [phgross]

- Do not use an icon for delegate_task action (opengever).
  [jone]

- Add a opengever own search template: including the dossiertitle and breadcrump in the searchResults.
  Issue #1253 Darstellung Dossiertitel bei Suchresultaten (Subdossiers, Dokumente, Aufgaben)
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1253
  [phgross]

- opengever slideColumns: resize on load for fixing space between left column and content.
  [jone]


1.0.2 (2011-12-21)
------------------

- Change delete button color for folder_contents.
  https://extranet.4teamwork.ch/support/zug/maintlog/1594
  [mathias.leimgruber]

- Fix error of searchbox viewlet when accessing manage-viewlets in zug.ch
  [eschmutz]

1.0.1 (2011-11-29)
------------------

- Updated sprite icon and css: Activate dossier icon for the two new bdbds special dossiers.
  [phgross]


1.0 (2011-11-17)
----------------

- Updated sprite icon and css: Activate dossier icon for the two new bdbds special dossiers.
  [phgross]

- Added special css handling for the task icon in listings
  Issue #1184 Abgeschnittene Icons
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1184
  [phgross]

- Removed 'enable_border' hack, because it's not longer necessary,
  the viewlet is now correctly overwritten in opengever.base.
  Issue #1178 OG-Spezifische Anpassungen in main_template
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1178/
  [phgross]


1.0a24 (2011-11-14)
-------------------
