@@ -5,7 +5,8 @@ Changelog
 1.0.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added profiles for seantis directories service.
+  [mathias.leimgruber]
 
 
 1.0.3 (2012-02-06)
